vlib/v/checker/tests/unused_import_err.vv
import term as te
import te.ui
